# desktop

./: .prettierrc  LICENSE  PRIVACY.md  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: beta-release.yml  build.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  Entitlements.plist  entitlements.plist  tauri.conf.json  windows-custom-signing.txt
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: axtree.rs  downloader.rs  engine.rs  ffmpeg.rs  github_release.rs  input.rs  lib.rs  logger.rs  macos_screencapture.rs  main.rs  permissions.rs  pipeline.rs  record.rs  settings.rs
src-tauri/src/commands/: demo.rs  general.rs  mod.rs  record.rs  recordings.rs  settings.rs  tools.rs
src-tauri/src/core/: archive.rs  demo.rs  input.rs  mod.rs  record.rs
src-tauri/src/tools/: axtree.rs  ffmpeg.rs  mod.rs  pipeline.rs
src-tauri/src/utils/: github_release.rs  mod.rs  permissions.rs  settings.rs
src/lib/: chunkedUploader.ts  gym.ts  uploadManager.ts  utils.ts
src/lib/api/: chunkedUploader.ts  forge.ts  gym.ts  index.ts
src/lib/api/core/: auth.ts  client.ts  errors.ts  index.ts
src/lib/api/endpoints/: index.ts  wallet.ts
src/lib/api/upload/: chunkedUploader.ts  index.ts
src/lib/components/: Button.svelte  Card.svelte  ChatView.svelte  CopyButton.svelte  CreateDatasetModal.svelte  CreatePoolModal.svelte  DatasetDetailsModal.svelte  DownloadScriptsModal.svelte  ForgeView.svelte  GenerateGymModal.svelte  GymBuilderView.svelte  GymView.svelte  Header.svelte  InitToolsFailedModal.svelte  Input.svelte  JobsList.svelte  LabView.svelte  MenuItem.svelte  Modal.svelte  NodeView.svelte  Pill.svelte  PrivacyPolicy.svelte  RecordingBadge.svelte  Sidebar.svelte  StatusBar.svelte  TextArea.svelte  Toast.svelte  ToastContainer.svelte  UploadConfirmModal.svelte  UploadManager.svelte  Version.svelte  WalletButton.svelte
src/lib/components/form/: Button.svelte  Checkbox.svelte  Input.svelte  TextArea.svelte
src/lib/components/gym/: AppText.svelte  AvailableTasks.svelte  AxTreeOverlay.svelte  EventTimestamp.svelte  GymChat.svelte  GymChat2.svelte  GymHeader.svelte  PriceRangeSlider.svelte  PrivacyPolicyEmbed.svelte  QuestPanel.svelte  QuestPopup.svelte  RecordButton.svelte  RecordingPanel.svelte  ScreenSelectModal.svelte
src/lib/components/gym-builder/: GymBuilderView.svelte  OverviewTab.svelte  SettingsTab.svelte  TaskEditModal.svelte  TasksTab.svelte  UploadsTab.svelte
src/lib/components/modals/: CreatePoolModal.svelte  GenerateGymModal.svelte  (+5 more)
src/lib/stores/: blacklist.ts  engine.ts  index.ts  misc.ts  privacy.ts  recording.ts  search.ts  toast.ts  wallet.ts
src/lib/types/: api.ts  forge.ts  gym.ts  platform.ts  time.ts  toast.ts  tools.ts  updates.ts  upload.ts
src/lib/utils/: index.ts  platform.ts  recordings.ts  svg.ts  time.ts  toast.ts  tools.ts  updates.ts  uploadManager.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app/: +layout.svelte
src/routes/demo/: +page.svelte
src/routes/gym/: +page.svelte
src/routes/node/: +page.svelte
src/routes/onboarding/: +layout.svelte  +page.svelte
src/routes/overlay/: +layout.svelte  +page.svelte
src/routes/profile/: +layout.svelte  +page.svelte
src/routes/window/: +layout.svelte  +page.svelte
(+35 files in other folders)
