[package]
name = "viralmind-desktop"
version = "0.1.0"
description = "The Viralmind desktop app."
authors = ["Dillon DuPont", "Morgan Dean"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gym_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"

[dependencies]
app-finder = "0.1.0"
window-vibrancy = "0.5.2"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
lazy_static = "1.4.0"
display-info = "0.4.3"
xcap = "0.2.2"
base64 = "0.21.7"
image = "0.24.7"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
